<resources>
    <string name="app_name">IWillTryToMakeYou</string>
    <string name="alarm">Alarm</string>
    <string name="type_name">Type name</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="thursday">Ths</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="iwilltrytowakeyou">IWillTryToWakeYou</string>
    <string name="the_alarm_app">The-Alarm-App</string>
    <string name="hmnn">(っ◔◡◔)っ</string>
    <string name="update_name">Update_name</string>
    <string name="select_all">Select All</string>
    <string name="pick_a_ringtone">PICK A RINGTONE</string>
    <string name="update">Update</string>
</resources>