<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="1dp"
    android:elevation="20dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:autofillHints="name"
        android:elevation="12dp"
        android:hint="@string/type_name"
        android:inputType="text" />

    <TimePicker
        android:id="@+id/timepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:baselineAligned="false"
        android:elevation="12dp"
        android:timePickerMode="spinner" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:elevation="12dp"
        android:orientation="horizontal"

        >

        <CheckBox
            android:id="@+id/tvMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:elevation="2dp"
            android:text="@string/monday" />


        <CheckBox

        android:id="@+id/tvTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:elevation="2dp"
            android:text="@string/tuesday" />

        <CheckBox
            android:id="@+id/tvWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:clickable="true"
            android:elevation="2dp"
            android:text="@string/Wednesday" />

        <CheckBox
            android:id="@+id/tvThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"


            android:clickable="true"
            android:elevation="2dp"
            android:text="@string/thursday" />

        <CheckBox
            android:id="@+id/tvFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"


            android:clickable="true"
            android:elevation="2dp"
            android:text="@string/friday" />

        <CheckBox
            android:id="@+id/tvSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:elevation="2dp"
            android:text="@string/saturday" />

        <CheckBox
            android:id="@+id/tvSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:elevation="2dp"
            android:text="@string/sunday" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_a_ringtone"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>
</LinearLayout>

