<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="20dp"
    android:layout_margin="1dp">

    <EditText
        android:id="@+id/etUpdateName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/update_name"
        android:layout_margin="3dp"
        android:inputType="text"
        android:autofillHints="name"
        />

    <TimePicker
        android:id="@+id/timeUpdatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:layout_margin="3dp"
        />

    <LinearLayout
        android:id="@+id/updateCheckBoxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="3dp"
        android:elevation="12dp"
        android:gravity="center"
        >
        <CheckBox
            android:id="@+id/tvMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:layout_marginStart="1dp"
            android:clickable="true"
            android:elevation="2dp"
            android:layout_gravity="center"/>


        <CheckBox
            android:id="@+id/tvTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:layout_marginStart="1dp"
            android:clickable="true"
            android:elevation="2dp"
            android:layout_gravity="center"/>

        <CheckBox
            android:id="@+id/tvWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Wednesday"
            android:layout_marginStart="1dp"
            android:clickable="true"
            android:elevation="2dp"
            android:layout_gravity="center"/>

        <CheckBox
            android:id="@+id/tvThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:layout_marginStart="1dp"
            android:clickable="true"
            android:elevation="2dp"
            android:layout_gravity="center"/>

        <CheckBox
            android:id="@+id/tvFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:layout_marginStart="1dp"
            android:clickable="true"
            android:elevation="2dp"
            android:layout_gravity="center"/>

        <CheckBox
            android:id="@+id/tvSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:layout_marginStart="1dp"
            android:clickable="true"
            android:elevation="2dp"
            android:layout_gravity="center"/>

        <CheckBox
            android:id="@+id/tvSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:layout_marginStart="2dp"
            android:clickable="true"
            android:elevation="2dp"
            android:layout_gravity="center"
            />
    </LinearLayout>

</LinearLayout>

