<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3245B1"
    tools:context=".SplashScreen">

    <TextView
        android:id="@+id/tvEmo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hmnn"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iwilltrytowakeyou"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvEmo"
        app:layout_constraintStart_toStartOf="@+id/tvEmo"
        app:layout_constraintTop_toBottomOf="@+id/tvEmo"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/tvAlarmApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        android:text="@string/the_alarm_app"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvAppName"
        app:layout_constraintStart_toStartOf="@+id/tvAppName"
        app:layout_constraintTop_toBottomOf="@+id/tvAppName" />
</androidx.constraintlayout.widget.ConstraintLayout>